--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,14 @@
 body {
-  background: #ccc;
+  background: #fff;
+}
+
+.root {
+  height: 50vh;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  height: 70vh; 
 }
