--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -12,3 +12,32 @@ body {
   align-items: center;  
   height: 70vh; 
 }
+
+.input {
+  label {
+    font-size: 18px;
+  }
+  input {
+    font-size: 16px;
+    width: 250px;
+    line-height: 25px;
+    margin-bottom: 10px;
+  }
+}
+
+.error {
+  color: red;
+  &--input {
+    position: absolute;
+    line-height: 25px;
+    margin-left: 20px;
+  }
+}
+
+.user {
+  background: #eee;
+  &--header {
+    display: flex;
+    justify-content: space-between;
+  }
+}
